GitHub integration: add HMAC helpers and config fallback; implement /github/call endpoint and secure /webhook/github with signature validation; enhance webhook logging (headers, raw body, parsed fields); extract and log issue details (title, description, state, labels, reactions, timeline_url, user); switch to log-only (no DB persistence). Add unit tests for HMAC helpers. Fix lint in utility/github.go (len(nil) check). Update .windsurf_plan.md with GitHub API layer details and next steps.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -873,3 +873,23 @@ Rationale: Enables creating Jira issues directly from the agent and prevents SQL
   - Consider surfacing minimal convenience flags for `jira_create_project` (e.g., `--key`, `--name`) while retaining full body passthrough.
   - Add rate-limit/backoff handling across Jira tools if needed.
 
+## 2025-08-19 — GitHub API layer and webhook
+
+- Backend:
+  - Added reusable GitHub client `utility/github.go` with `GitHubDo(method, path, q, body)` supporting `GITHUB_API_BASE` and `GITHUB_TOKEN` from INI `[default]`.
+  - New endpoints in `agent.go`:
+    - `POST /github/call` (CSRF-protected) to proxy direct GitHub REST calls with query/body normalization and 1MB body limit.
+    - `POST /webhook/github` with HMAC SHA-256 validation (`X-Hub-Signature-256`) against `GITHUB_WEBHOOK_SECRET` from INI or env; logs event/repo succinctly.
+  - Implemented `hmacSha256` and `hmacEqual` helpers in `agent.go` for secure signature computation and constant-time equals (case-insensitive hex).
+- Tests:
+  - Added `agent_github_test.go` covering signature format/length and case-insensitive equality.
+- Lint:
+  - Fixed redundant nil check in `utility/github.go` for `len(q)` (ID: 9ae55391-78a0-444a-8455-bb7026e35ba3).
+- Config:
+  - Webhook secret prefers INI `GITHUB_WEBHOOK_SECRET`, falling back to environment variable.
+
+Next steps:
+- Add unit/integration tests for `POST /github/call` and `utility/GitHubDo` (mock server + headers/assertions).
+- Build initial GitHub tools (analogous to Jira): repos list/get, issues list/create/update, PR list/create/merge, comments.
+- Extend webhook handling to process common events (issues, PRs, pushes) and optionally persist to DB.
+- Document GitHub configuration and examples.
