GitHub webhooks: switch to log-only persistence; enrich issues logging (title, description, state, labels, reactions, timeline_url, user); add push-event analysis to log new files created with head commit details. Update plan with GitHub webhook integration notes (2025-08-20).

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -16,6 +16,14 @@
 - Added debug logging for exit condition.
 - Confirmed resolution of hanging issue with 'air' after adding terminal check and debug logging.
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
+ 
+### GitHub Webhook Integration (2025-08-20)
+- Security: Added HMAC SHA-256 signature validation for `POST /webhook/github` using `X-Hub-Signature-256` and secret from INI `GITHUB_WEBHOOK_SECRET` (fallback to env).
+- Logging: Verbose request diagnostics (headers, body length, raw body capped at 1MB, client IP, query).
+- Parsing: Extract common fields (action, repo name/full/id, sender, installation, ref/before/after, pusher).
+- Issues events: Extract and log `title`, `body` (truncated to 512 chars), `state`, `labels[].name`, `reactions.total_count` and per-reaction counts, `timeline_url`, and author (`issue.user.login|name`).
+- Push events: Detect and log branch, `created` flag, total files added, head commit id/author/message (truncated), plus a sample (up to 10) of added filenames.
+- Persistence: Switched to log-only behavior (no DB writes) for webhook events by design; can be re-enabled later behind a flag.
  - Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
 - Behavior Alignment (2025-08-18): Updated `buildJiraCreateIssueBody()` so user-provided `fields` take precedence over convenience params. Convenience params now apply only when the corresponding key (e.g., `project`, `issuetype`, `summary`, `description`, `labels`, `priority`, `assignee`, `reporter`, `parent`) is absent in `fields`.
 - Documented: jira_create_issue now respects --fields precedence over convenience params.
