--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -16,7 +16,8 @@
 - Added debug logging for exit condition.
 - Confirmed resolution of hanging issue with 'air' after adding terminal check and debug logging.
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
- 
+- Implemented AI follow-up loop for gemini-code-assist bot reviews in GitHub webhook handler.
+
 ### GitHub Webhook Integration (2025-08-20)
 - Security: Added HMAC SHA-256 signature validation for `POST /webhook/github` using `X-Hub-Signature-256` and secret from INI `GITHUB_WEBHOOK_SECRET` (fallback to env).
 - Logging: Verbose request diagnostics (headers, body length, raw body capped at 1MB, client IP, query).
@@ -24,12 +25,24 @@
 - Issues events: Extract and log `title`, `body` (truncated to 512 chars), `state`, `labels[].name`, `reactions.total_count` and per-reaction counts, `timeline_url`, and author (`issue.user.login|name`).
 - Push events: Detect and log branch, `created` flag, total files added, head commit id/author/message (truncated), plus a sample (up to 10) of added filenames.
 - Persistence: Switched to log-only behavior (no DB writes) for webhook events by design; can be re-enabled later behind a flag.
- - Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
+- AI follow-up loop (2025-08-20): In `agent.go` GitHub webhook handler, detect `pull_request_review` and `pull_request_review_comment` authored by `gemini-code-assist[bot]`, extract review/comment body and inline context, and asynchronously invoke `utility.GeminiAPIHandler` with task instructions to apply suggestions and respond `ALL_DONE!` when none remain. Logged results only for now.
+- Refactor (2025-08-18): DRYed Jira create-issue labels parsing in `tools/jira_issue_ops.go` by introducing a local `addLabel` helper inside `buildJiraCreateIssueBody()` to trim and append non-empty labels from `[]interface{}`, `[]string`, or comma-separated `string`. Behavior preserved.
 - Behavior Alignment (2025-08-18): Updated `buildJiraCreateIssueBody()` so user-provided `fields` take precedence over convenience params. Convenience params now apply only when the corresponding key (e.g., `project`, `issuetype`, `summary`, `description`, `labels`, `priority`, `assignee`, `reporter`, `parent`) is absent in `fields`.
 - Documented: jira_create_issue now respects --fields precedence over convenience params.
-  - Small DRY refactor (2025-08-19): Introduced `setQueryFromInt(...)` in `tools/jira_project_ops.go` and replaced repeated int/float64 parsing for `recent`, `startAt`, `maxResults`, and `categoryId` query params. Build passes.
-  - DRY helper (2025-08-19): Added `getProjectIDOrKey(args)` in `tools/jira_project_ops.go` and refactored repeated `projectIdOrKey` extraction in:
-    - `executeJiraGetProjectTool`
+- Small DRY refactor (2025-08-19): Introduced `setQueryFromInt(...)` in `tools/jira_project_ops.go` and replaced repeated int/float64 parsing for `recent`, `startAt`, `maxResults`, and `categoryId` query params. Build passes.
+- DRY helper (2025-08-19): Added `getProjectIDOrKey(args)` in `tools/jira_project_ops.go` and refactored repeated `projectIdOrKey` extraction in:
+  - `executeJiraGetProjectTool`
+  - `executeJiraUpdateProjectTool`
+  - `executeJiraDeleteProjectTool`
+  - `executeJiraArchiveProjectTool`
+  - `executeJiraDeleteProjectAsyncTool`
+  - `executeJiraRestoreProjectTool`
+  - `executeJiraGetProjectStatusesTool`
+  Result: reduced duplication and centralized validation. `go build ./...` passes.
+- Consistency (2025-08-19): Added explicit `http.StatusUnauthorized` handling in `tools/jira_project_ops.go` for:
+  - `executeJiraProjectsSearchTool` (returns "unauthorized" on 401)
+  - `executeJiraGetProjectTool` (401 handling alongside existing 404 check)
+  Reason: clearer, consistent error messages across Jira project tools. Build verified.
     - `executeJiraUpdateProjectTool`
     - `executeJiraDeleteProjectTool`
     - `executeJiraArchiveProjectTool`
