Gemini: add global rate limiting (default 10 rpm, configurable via GEMINI_RPM) and retry/backoff on 429/RESOURCE_EXHAUSTED; wait on limiter before calls and retries; honor server retryDelay when present. Docs: update .windsurf_plan.md with config and behavior details.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -34,6 +34,16 @@
     - `executeJiraGetProjectTool` (401 handling alongside existing 404 check)
     Reason: clearer, consistent error messages across Jira project tools. Build verified.
 
+### Gemini Rate Limiting + Retry (2025-08-20)
+- Implemented global rate limiting and backoff for Gemini API calls in `utility/gemini.go`.
+  - Uses `golang.org/x/time/rate` with default 10 req/min (configurable via `[default] GEMINI_RPM` in `~/.config/go-thing/config.ini`).
+  - All calls to `GenerateContent` now `Wait(ctx)` on the limiter before execution and before retries.
+  - Added best-effort retry loop for 429/RESOURCE_EXHAUSTED with:
+    - Honor server-provided RetryInfo delay if present (e.g., `retryDelay:25s`).
+    - Exponential backoff fallback (5s * attempt), up to 3 attempts.
+  - Logs initialization: `[Gemini Rate] Initialized limiter: <rpm> req/min ...`.
+  - Aims to prevent errors like: quota exceeded 10 req/min for `gemini-2.5-flash`.
+
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
   - `jira_get_comments_by_ids` → POST `/rest/api/3/comment/list`
