--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -43,6 +43,7 @@
     - Linear backoff fallback (5s * attempt), up to 3 attempts.
   - Logs initialization: `[Gemini Rate] Initialized limiter: <rpm> req/min ...`.
   - Aims to prevent errors like: quota exceeded 10 req/min for `gemini-2.5-flash`.
+  - Parsing robustness (2025-08-20): Updated `utility/gemini.go` `parseRetryDelay()` to parse `retryDelay:` using `strings.IndexAny` and trim at the first delimiter (space or comma), replacing `strings.Fields` to handle formats like `retryDelay:25s,otherInfo`.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
