utility/gemini: robust 429 retry detection via *googleapi.Error; keep string fallback. Add googleapi dep and tidy.\n\n- shouldRetry429 now checks structured errors (Code==429) with errors.As\n- fallback matches resource_exhausted/429/quota substrings\n- add import of google.golang.org/api/googleapi and errors\n- go.mod/go.sum updated via go get google.golang.org/api@latest\n- doc: update .windsurf_plan.md under Gemini Rate Limiting + Retry (2025-08-20)

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -44,6 +44,7 @@
   - Logs initialization: `[Gemini Rate] Initialized limiter: <rpm> req/min ...`.
   - Aims to prevent errors like: quota exceeded 10 req/min for `gemini-2.5-flash`.
   - Parsing robustness (2025-08-20): Updated `utility/gemini.go` `parseRetryDelay()` to parse `retryDelay:` using `strings.IndexAny` and trim at the first delimiter (space or comma), replacing `strings.Fields` to handle formats like `retryDelay:25s,otherInfo`.
+  - Robust 429 detection (2025-08-20): `shouldRetry429()` now first checks for structured `*googleapi.Error` via `errors.As` and `Code == 429`, with string-based fallback for `resource_exhausted`/`429`/`quota`. Added dependency `google.golang.org/api/googleapi`.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
