--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -50,6 +50,7 @@
     - `maxAttempts = 3`
     - `baseDelay = 5 * time.Second`
     Reason: group configuration-like values centrally for easier discovery and future tweaks.
+  - Readability (2025-08-21): Flattened nested if/else when parsing `[default] GEMINI_RPM` in `utility/gemini.go` to reduce nesting while preserving behavior (logs parse errors and non-positive values, otherwise sets custom RPM).
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
