seed math/rand at startup for non-deterministic backoff jitter.\n\n- Import math/rand as mathrand and seed in init() with time.Now().UnixNano()\n- Ensures jitter differs across concurrently-started instances to avoid sync retries\n\nDocs: note added to .windsurf_plan.md under Gemini Rate Limiting + Retry (Reliability, 2025-08-21).

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -52,6 +52,7 @@
     Reason: group configuration-like values centrally for easier discovery and future tweaks.
   - Readability (2025-08-21): Flattened nested if/else when parsing `[default] GEMINI_RPM` in `utility/gemini.go` to reduce nesting while preserving behavior (logs parse errors and non-positive values, otherwise sets custom RPM).
   - Safety (2025-08-21): Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)` (infinite rate) when `GEMINI_RPM` is excessively large. Ensures limiter remains active and log output reflects a valid interval.
+  - Reliability (2025-08-21): Seeded `math/rand` in `agent.go` `init()` with `time.Now().UnixNano()` so backoff jitter is non-deterministic across instances, avoiding synchronized retries.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
