--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -53,6 +53,7 @@
   - Readability (2025-08-21): Flattened nested if/else when parsing `[default] GEMINI_RPM` in `utility/gemini.go` to reduce nesting while preserving behavior (logs parse errors and non-positive values, otherwise sets custom RPM).
   - Safety (2025-08-21): Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)` (infinite rate) when `GEMINI_RPM` is excessively large. Ensures limiter remains active and log output reflects a valid interval.
   - Reliability (2025-08-21): Initially seeded `math/rand` in `agent.go` to randomize backoff jitter; later removed as unnecessary because Go ≥1.20 auto-seeds the global RNG. Cleanup keeps behavior while reducing code.
+  - Observability (2025-08-21): Replaced `log.Printf` with structured `slog` in `utility/gemini.go` for machine-readable logs (levels, key-values) across rate limiter init, API send/receive, retries, and context updates.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
