maint: introduce geminiModelName constant and use in GenerateContent; update plan.\n\n- Adds package-level geminiModelName in utility/gemini.go\n- Replaces hardcoded model string in GenerateContent call\n- Docs: plan updated under Maintainability

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -54,7 +54,7 @@
   - Safety (2025-08-21): Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)` (infinite rate) when `GEMINI_RPM` is excessively large. Ensures limiter remains active and log output reflects a valid interval.
   - Reliability (2025-08-21): Initially seeded `math/rand` in `agent.go` to randomize backoff jitter; later removed as unnecessary because Go ≥1.20 auto-seeds the global RNG. Cleanup keeps behavior while reducing code.
   - Observability (2025-08-21): Replaced `log.Printf` with structured `slog` in `utility/gemini.go` for machine-readable logs (levels, key-values) across rate limiter init, API send/receive, retries, and context updates.
-  - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and used it in `callGeminiAPI()` to avoid hardcoded model strings and ease future upgrades/testing.
+  - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and updated the API call to use it (replacing hardcoded model string). Simplifies future model switches and testing.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
