--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -52,6 +52,7 @@
     Reason: group configuration-like values centrally for easier discovery and future tweaks.
   - Readability (2025-08-21): Flattened nested if/else when parsing `[default] GEMINI_RPM` in `utility/gemini.go` to reduce nesting while preserving behavior (logs parse errors and non-positive values, otherwise sets custom RPM).
   - Safety (2025-08-21): Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)` (infinite rate) when `GEMINI_RPM` is excessively large. Ensures limiter remains active and log output reflects a valid interval.
+  - Safety (2025-08-21): Clamped limiter burst to a maximum (100) to prevent massive initial spikes when `GEMINI_RPM` is very large; logs a warning when clamped.
   - Reliability (2025-08-21): Initially seeded `math/rand` in `agent.go` to randomize backoff jitter; later removed as unnecessary because Go ≥1.20 auto-seeds the global RNG. Cleanup keeps behavior while reducing code.
   - Observability (2025-08-21): Replaced `log.Printf` with structured `slog` in `utility/gemini.go` for machine-readable logs (levels, key-values) across rate limiter init, API send/receive, retries, and context updates.
   - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and updated the API call to use it (replacing hardcoded model string). Simplifies future model switches and testing.
