utility/gemini: extract backoffJitterMs constant and replace magic number\n\n- Define backoffJitterMs at package level and use it in jitter calculation.\n- Improves readability/maintainability; behavior unchanged.\n- Update .windsurf_plan.md documenting the change.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -57,6 +57,7 @@
   - Observability (2025-08-21): Replaced `log.Printf` with structured `slog` in `utility/gemini.go` for machine-readable logs (levels, key-values) across rate limiter init, API send/receive, retries, and context updates.
   - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and updated the API call to use it (replacing hardcoded model string). Simplifies future model switches and testing.
   - Bugfix (2025-08-21): Corrected indentation of retry delay comment and `delay := ...` declaration inside the `for` retry loop in `utility/gemini.go` to ensure they are within scope; fixes compile error. `go build ./...` passes.
+  - Readability (2025-08-21): Replaced magic number in backoff jitter with `backoffJitterMs` package-level constant in `utility/gemini.go`; continues to add up to 1000ms jitter while clarifying intent.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
