utility: move rate limiter maxBurst into package-level const block for consistency with other config values; update .windsurf_plan.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -58,7 +58,7 @@
   - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and updated the API call to use it (replacing hardcoded model string). Simplifies future model switches and testing.
   - Bugfix (2025-08-21): Corrected indentation of retry delay comment and `delay := ...` declaration inside the `for` retry loop in `utility/gemini.go` to ensure they are within scope; fixes compile error. `go build ./...` passes.
   - Readability (2025-08-21): Replaced magic number in backoff jitter with `backoffJitterMs` package-level constant in `utility/gemini.go`; continues to add up to 1000ms jitter while clarifying intent.
-  - Consistency (2025-08-22): Moved `maxBurst` from local const in `getGeminiLimiter()` to the package-level const block alongside `maxAttempts`, `baseDelay`, and `backoffJitterMs` for centralized configuration.
+  - Maintainability (2025-08-22): Moved `maxBurst` from a local `const` inside `getGeminiLimiter()` to the package-level `const` block in `utility/gemini.go`, aligning with `maxAttempts`, `baseDelay`, and `backoffJitterMs` for centralized configuration.
 
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
