utility: extract parseRpmFromConfig and refactor getGeminiLimiter; doc: update .windsurf_plan.md with refactor note

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -60,6 +60,8 @@
   - Readability (2025-08-21): Replaced magic number in backoff jitter with `backoffJitterMs` package-level constant in `utility/gemini.go`; continues to add up to 1000ms jitter while clarifying intent.
   - Maintainability (2025-08-22): Moved `maxBurst` from a local `const` inside `getGeminiLimiter()` to the package-level `const` block in `utility/gemini.go`, aligning with `maxAttempts`, `baseDelay`, and `backoffJitterMs` for centralized configuration.
 
+  - Refactor (2025-08-22): Extracted `parseRpmFromConfig(cfg map[string]string, defaultRpm int)` from `getGeminiLimiter()` in `utility/gemini.go` to simplify limiter initialization and improve testability. Behavior unchanged: defaults to 10 RPM when unset/invalid; warnings logged on parse/validation issues.
+
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
   - `jira_get_comments_by_ids` → POST `/rest/api/3/comment/list`
