utility: add defaultGeminiRpm constant; use in getGeminiLimiter; plan: note constant for readability

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -62,6 +62,8 @@
 
   - Refactor (2025-08-22): Extracted `parseRpmFromConfig(cfg map[string]string, defaultRpm int)` from `getGeminiLimiter()` in `utility/gemini.go` to simplify limiter initialization and improve testability. Behavior unchanged: defaults to 10 RPM when unset/invalid; warnings logged on parse/validation issues.
 
+  - Readability (2025-08-22): Introduced `defaultGeminiRpm = 10` constant in `utility/gemini.go` and replaced magic number in `getGeminiLimiter()` to centralize configuration and clarify intent.
+
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
   - `jira_get_comments_by_ids` → POST `/rest/api/3/comment/list`
