--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -36,31 +36,45 @@
      Reason: clearer, consistent error messages across Jira project tools. Build verified.
 
 ### Gemini Rate Limiting + Retry (2025-08-20)
-- Implemented global rate limiting and backoff for Gemini API calls in `utility/gemini.go`.
+
+- Overview
+  - Implemented global rate limiting and backoff for Gemini API calls in `utility/gemini.go`.
   - Uses `golang.org/x/time/rate` with default 10 req/min (configurable via `[default] GEMINI_RPM` in `~/.config/go-thing/config.ini`).
   - All calls to `GenerateContent` now `Wait(ctx)` on the limiter before execution and before retries.
-  - Added best-effort retry loop for 429/RESOURCE_EXHAUSTED with:
-    - Honor server-provided RetryInfo delay if present (e.g., `retryDelay:25s`).
-    - Exponential backoff fallback (e.g., 5s, 10s, 20s for 3 attempts), up to 3 attempts.
-  - Logs initialization: `[Gemini Rate] Initialized limiter: <rpm> req/min ...`.
   - Aims to prevent errors like: quota exceeded 10 req/min for `gemini-2.5-flash`.
-  - Parsing robustness (2025-08-20): Updated `utility/gemini.go` `parseRetryDelay()` to parse `retryDelay:` using `strings.IndexAny` and trim at the first delimiter (space or comma), replacing `strings.Fields` to handle formats like `retryDelay:25s,otherInfo`.
-  - Robust 429 detection (2025-08-20): `shouldRetry429()` now first checks for structured `*googleapi.Error` via `errors.As` and `Code == 429`, with string-based fallback for `resource_exhausted`/`429`/`quota`. Added dependency `google.golang.org/api/googleapi`.
-  - Maintainability (2025-08-21): Promoted retry/backoff constants to package-level in `utility/gemini.go`:
-    - `maxAttempts = 3`
-    - `baseDelay = 5 * time.Second`
-    Reason: group configuration-like values centrally for easier discovery and future tweaks.
-  - Readability (2025-08-21): Flattened nested if/else when parsing `[default] GEMINI_RPM` in `utility/gemini.go` to reduce nesting while preserving behavior (logs parse errors and non-positive values, otherwise sets custom RPM).
-  - Safety (2025-08-21): Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)` (infinite rate) when `GEMINI_RPM` is excessively large. Ensures limiter remains active and log output reflects a valid interval.
-  - Safety (2025-08-21): Clamped limiter burst to a maximum (100) to prevent massive initial spikes when `GEMINI_RPM` is very large; logs a warning when clamped.
-  - Reliability (2025-08-21): Initially seeded `math/rand` in `agent.go` to randomize backoff jitter; later removed as unnecessary because Go ≥1.20 auto-seeds the global RNG. Cleanup keeps behavior while reducing code.
-  - Observability (2025-08-21): Replaced `log.Printf` with structured `slog` in `utility/gemini.go` for machine-readable logs (levels, key-values) across rate limiter init, API send/receive, retries, and context updates.
-  - Maintainability (2025-08-21): Introduced `geminiModelName` constant in `utility/gemini.go` and updated the API call to use it (replacing hardcoded model string). Simplifies future model switches and testing.
-  - Bugfix (2025-08-21): Corrected indentation of retry delay comment and `delay := ...` declaration inside the `for` retry loop in `utility/gemini.go` to ensure they are within scope; fixes compile error. `go build ./...` passes.
-  - Readability (2025-08-21): Replaced magic number in backoff jitter with `backoffJitterMs` package-level constant in `utility/gemini.go`; continues to add up to 1000ms jitter while clarifying intent.
-  - Maintainability (2025-08-22): Moved `maxBurst` from a local `const` inside `getGeminiLimiter()` to the package-level `const` block in `utility/gemini.go`, aligning with `maxAttempts`, `baseDelay`, and `backoffJitterMs` for centralized configuration.
 
-  - Refactor (2025-08-22): Extracted `parseRpmFromConfig(cfg map[string]string, defaultRpm int)` from `getGeminiLimiter()` in `utility/gemini.go` to simplify limiter initialization and improve testability. Behavior unchanged: defaults to 10 RPM when unset/invalid; warnings logged on parse/validation issues.
+- Retry & Backoff
+  - Best-effort retry loop for 429/RESOURCE_EXHAUSTED.
+  - Honors server-provided `RetryInfo` delay when present (e.g., `retryDelay:25s`).
+  - Exponential backoff fallback (5s, 10s, 20s for 3 attempts).
+
+- Maintainability
+  - Promoted retry/backoff constants to package-level (`maxAttempts`, `baseDelay`).
+  - Introduced `geminiModelName` constant for future model switches.
+  - Moved `maxBurst` to package-level const block for centralized configuration.
+  - Extracted `parseRpmFromConfig(cfg, defaultRpm)` from `getGeminiLimiter()` to simplify limiter initialization and enable targeted testing.
+
+- Readability
+  - Flattened GEMINI_RPM parsing logic to reduce nesting while preserving behavior.
+  - Replaced magic number in backoff jitter with `backoffJitterMs` constant.
+  - Added `defaultGeminiRpm = 10` constant and used it in `getGeminiLimiter()`.
+
+- Safety
+  - Clamped computed limiter interval to a minimum of `time.Nanosecond` to prevent `rate.Every(0)`.
+  - Clamped limiter burst to a maximum (100) to avoid large initial spikes; logs a warning when clamped.
+
+- Reliability
+  - Initially seeded RNG for jitter; later removed as Go ≥1.20 auto-seeds, retaining behavior with less code.
+
+- Observability
+  - Replaced `log.Printf` with structured `slog` across limiter init, API send/receive, retries, and context updates.
+  - Added init log: `Initialized limiter`, including rpm/interval/burst.
+
+- Parsing Robustness
+  - `parseRetryDelay()` now parses `retryDelay:` using `strings.IndexAny` and trims at first delimiter (space/comma), handling forms like `retryDelay:25s,otherInfo`.
+
+- Bugfixes
+  - Corrected indentation/scope for retry delay comment and `delay := ...` in the retry loop to fix a compile error. `go build ./...` passes.
 
   - Readability (2025-08-22): Introduced `defaultGeminiRpm = 10` constant in `utility/gemini.go` and replaced magic number in `getGeminiLimiter()` to centralize configuration and clarify intent.
 
