github/webhook: switch to typed go-github parsing for PR and Push events; improve logs\n\n- agent.go: replace untyped map assertions with *github.PullRequestEvent and *github.PushEvent getters; keep prior logging fields, add safety truncation\n- deps: add github.com/google/go-github/v66 and github.com/google/go-querystring (indirect)\n- docs: update .windsurf_plan.md with 2025-08-22 typed parsing refactor summary

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -87,6 +87,14 @@
 
   - Readability (2025-08-22): Introduced `defaultGeminiRpm = 10` constant in `utility/gemini.go` and replaced magic number in `getGeminiLimiter()` to centralize configuration and clarify intent.
 
+### GitHub Webhook typed parsing refactor (2025-08-22)
+- File: `agent.go`
+- Change: Replaced untyped `map[string]interface{}` parsing for GitHub webhook enrichment with typed structs using `github.com/google/go-github/v66`.
+  - Pull requests: use `*github.PullRequestEvent` getters to extract `number`, `title`, `body` (truncated to 512), `state`, `draft`, `user.login`, `html_url`, `head.ref/sha`, `base.ref`, `commits`, `additions`, `deletions`, `changed_files`, `merged`, `mergeable_state`, `merge_commit_sha`.
+  - Push: use `*github.PushEvent` to compute `created`, aggregate `added` files across commits (keep up to 10 samples), derive head commit `id/message/author.name` and prefer typed `ref` when available.
+- Result: safer parsing, clearer code, and stable logging without brittle type assertions. Behavior matches previous logging but is now strongly typed.
+- Dependencies: added `github.com/google/go-github/v66` and `github.com/google/go-querystring v1.1.0` (indirect) to `go.mod`/`go.sum`.
+
 ### Jira Issue Comments Tools (2025-08-19)
 - Implemented full comment management in `tools/jira_issue_comments.go`:
   - `jira_get_comments_by_ids` → POST `/rest/api/3/comment/list`
