slack(home): show last 10 threads; use view.hash on app_home_opened with retry on hash_conflict; update plan

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -225,6 +225,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - `BuildSlackHomeView() slack.HomeTabViewRequest` builds a simple Home tab with header, intro, tips, and divider using Block Kit.
     - `PublishSlackHomeTab(userID string) error` uses `slack-go/slack` `PublishView` with the bot token from INI config (`SLACK_BOT_TOKEN`).
   - `go build ./...` passes.
+  - Enhancement (2025-08-22): Home tab now shows the last 10 threads from the database. Implemented `fetchRecentThreads(limit)` in `utility/slack.go` using `db.Get()` and rendered a markdown bullet list under a "Recent Threads" section in the Home view.
 - Slack App configuration required:
   - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
   - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
