maint(slack): replace magic number with defaultRecentThreadsLimit and add slackErrorHashConflict constant; update .windsurf_plan.md to document changes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -216,25 +216,29 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Refactored Account menu in `web/src/App.tsx` to use the hook, removing inline document listeners and simplifying the component.
   - Benefits: better reusability across components, improved accessibility with focus restoration, and reduced code duplication.
 
-## Slack Home Tab Support (2025-08-14)
-- Backend:
-  - Added Home tab handling for Slack `app_home_opened` events in `agent.go` route `POST /webhook/slack`.
-    - We now unwrap the inner `event` and branch on `type` (`message` vs `app_home_opened`).
-    - For `app_home_opened`, we call `utility.PublishSlackHomeTab(userID)` to publish a Home tab view.
-  - New helpers in `utility/slack.go`:
-    - `BuildSlackHomeView() slack.HomeTabViewRequest` builds a simple Home tab with header, intro, tips, and divider using Block Kit.
-    - `PublishSlackHomeTab(userID string) error` uses `slack-go/slack` `PublishView` with the bot token from INI config (`SLACK_BOT_TOKEN`).
-  - `go build ./...` passes.
-  - Enhancement (2025-08-22): Home tab now shows the last 10 threads from the database. Implemented `fetchRecentThreads(limit)` in `utility/slack.go` using `db.Get()` and rendered a markdown bullet list under a "Recent Threads" section in the Home view.
-- Slack App configuration required:
-  - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
-  - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
-  - Interactivity not required for this basic Home tab.
+ ## Slack Home Tab Support (2025-08-14)
+  - Backend:
+    - Added Home tab handling for Slack `app_home_opened` events in `agent.go` route `POST /webhook/slack`.
+      - We now unwrap the inner `event` and branch on `type` (`message` vs `app_home_opened`).
+      - For `app_home_opened`, we call `utility.PublishSlackHomeTab(userID)` to publish a Home tab view.
+    - New helpers in `utility/slack.go`:
+      - `BuildSlackHomeView() slack.HomeTabViewRequest` builds a simple Home tab with header, intro, tips, and divider using Block Kit.
+      - `PublishSlackHomeTab(userID string) error` uses `slack-go/slack` `PublishView` with the bot token from INI config (`SLACK_BOT_TOKEN`).
+    - `go build ./...` passes.
+    - Enhancement (2025-08-22): Home tab now shows the last 10 threads from the database. Implemented `fetchRecentThreads(limit)` in `utility/slack.go` using `db.Get()` and rendered a markdown bullet list under a "Recent Threads" section in the Home view.
+  - Maintainability (2025-08-23): Introduced `defaultRecentThreadsLimit` constant in `utility/slack.go` to replace magic number `10` in Slack Home tab recent threads logic, used in both `fetchRecentThreads(limit)` defaulting and the call site in `BuildSlackHomeView()`.
+  - Maintainability (2025-08-23): Introduced `slackErrorHashConflict` constant (was "hash_conflict") in `utility/slack.go` and updated `PublishSlackHomeTab()` to use it to avoid magic strings when handling Slack view hash conflicts.
+  - Note: The new `slackErrorHashConflict` constant improves maintainability by providing a clear and consistent error message for Slack view hash conflicts, making it easier to identify and debug issues.
+  - Slack App configuration required:
+    - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
+    - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
+    - Interactivity not required for this basic Home tab.
 - Notes / Next:
   - Consider verifying Slack request signatures via `X-Slack-Signature`/`X-Slack-Request-Timestamp` for stronger security on `/webhook/slack`.
   - Future: personalize the Home tab (recent threads, quick actions) by looking up the Slack user and our conversation DB (`threads`, `messages`).
 
 ## Auth modals type-safety (2025-08-13)
+{{ ... }}
 - File: `web/src/components/LoginModal.tsx`
   - Added `LoginSuccess` and `LoginError` types.
   - Parse `res.json()` as `unknown` then assert specific shapes; removed `any` casts.
