migrations: add DESC index on threads.updated_at for Slack Home performance; docs(plan): record migration details

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -233,9 +233,13 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
     - Interactivity not required for this basic Home tab.
-- Notes / Next:
-  - Consider verifying Slack request signatures via `X-Slack-Signature`/`X-Slack-Request-Timestamp` for stronger security on `/webhook/slack`.
-  - Future: personalize the Home tab (recent threads, quick actions) by looking up the Slack user and our conversation DB (`threads`, `messages`).
+### DB Performance Index for Slack Home (2025-08-23)
+- Added migrations to index `threads.updated_at` in descending order to speed up queries used by `utility/slack.go` `fetchRecentThreads(...)`:
+  - `migrations/0006_add_index_on_threads_updated_at.up.sql`:
+    - `CREATE INDEX IF NOT EXISTS idx_threads_updated_at_desc ON threads(updated_at DESC);`
+  - `migrations/0006_add_index_on_threads_updated_at.down.sql`:
+    - `DROP INDEX IF EXISTS idx_threads_updated_at_desc;`
+- Rationale: `SELECT ... FROM threads ORDER BY updated_at DESC LIMIT N` benefits from a matching DESC index as thread count grows, ensuring fast Slack Home tab loads.
 
 ## Auth modals type-safety (2025-08-13)
 {{ ... }}
