--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -228,6 +228,8 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - Enhancement (2025-08-22): Home tab now shows the last 10 threads from the database. Implemented `fetchRecentThreads(limit)` in `utility/slack.go` using `db.Get()` and rendered a markdown bullet list under a "Recent Threads" section in the Home view.
   - Maintainability (2025-08-23): Introduced `defaultRecentThreadsLimit` constant in `utility/slack.go` to replace magic number `10` in Slack Home tab recent threads logic, used in both `fetchRecentThreads(limit)` defaulting and the call site in `BuildSlackHomeView()`.
   - Maintainability (2025-08-23): Introduced `slackErrorHashConflict` constant (was "hash_conflict") in `utility/slack.go` and updated `PublishSlackHomeTab()` to use it to avoid magic strings when handling Slack view hash conflicts.
+  - Robustness (2025-08-23): Escaped special characters `&`, `<`, and `>` in thread titles within `BuildSlackHomeView()` before inserting into the `mrkdwn` list to prevent Slack formatting issues. File: `utility/slack.go`.
+  - Consistency (2025-08-23): Fallback timestamp in recent threads now uses `UpdatedAt.UTC()` and appends `" UTC"` to the formatted string to avoid server-local timezone confusion. File: `utility/slack.go`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
