slack(home): propagate context to DB query and publishers
- Add context.Context to fetchRecentThreads, BuildSlackHomeView, and PublishSlackHomeTab.
- Use QueryContext for recent threads query.
- Pass c.Request.Context() from Slack app_home_opened handler.
- Update plan documenting the change.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -230,6 +230,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
   - Maintainability (2025-08-23): Introduced `slackErrorHashConflict` constant (was "hash_conflict") in `utility/slack.go` and updated `PublishSlackHomeTab()` to use it to avoid magic strings when handling Slack view hash conflicts.
   - Robustness (2025-08-23): Escaped special characters `&`, `<`, and `>` in thread titles within `BuildSlackHomeView()` before inserting into the `mrkdwn` list to prevent Slack formatting issues. File: `utility/slack.go`.
   - Consistency (2025-08-23): Fallback timestamp in recent threads now uses `UpdatedAt.UTC()` and appends `" UTC"` to the formatted string to avoid server-local timezone confusion. File: `utility/slack.go`.
+  - Reliability (2025-08-23): Plumbed `context.Context` through Slack Home helpers to respect request cancellations and timeouts:
+    - `fetchRecentThreads(ctx, limit)` now uses `dbc.QueryContext(ctx, ...)`.
+    - `BuildSlackHomeView(ctx)` accepts and passes context through.
+    - `PublishSlackHomeTab(ctx, userID, hash)` constructs the view with context.
+    - Updated call site in `agent.go` to pass `c.Request.Context()` for `app_home_opened`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
