slack(home): define package-level mrkdwn escaper to avoid allocations per render
- Add package var slackMrkdwnEscaper (strings.NewReplacer) for &, <, > escaping.
- Use it in BuildSlackHomeView instead of creating per-call replacer.
- Update plan to reflect optimization.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -235,7 +235,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - `BuildSlackHomeView(ctx)` accepts and passes context through.
     - `PublishSlackHomeTab(ctx, userID, hash)` constructs the view with context.
     - Updated call site in `agent.go` to pass `c.Request.Context()` for `app_home_opened`.
-  - Micro-optimization (2025-08-23): Reuse a single `strings.NewReplacer` per render to escape mrkdwn (`&`, `<`, `>`) instead of creating a new replacer each loop iteration. File: `utility/slack.go`.
+  - Micro-optimization (2025-08-23): Define a package-level `strings.NewReplacer` (`slackMrkdwnEscaper`) to escape mrkdwn (`&`, `<`, `>`) and reuse it across renders, avoiding allocations per call/iteration. File: `utility/slack.go`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
