slack(config): remove redundant getConfig; LoadConfig already caches via sync.Once
- Drop cfgOnce/cachedCfg layer in slack.go.
- Call LoadConfig() directly in SendSlackResponse and PublishSlackHomeTab.
- Update plan to reflect simplification.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -236,7 +236,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - `PublishSlackHomeTab(ctx, userID, hash)` constructs the view with context.
     - Updated call site in `agent.go` to pass `c.Request.Context()` for `app_home_opened`.
   - Micro-optimization (2025-08-23): Define a package-level `strings.NewReplacer` (`slackMrkdwnEscaper`) to escape mrkdwn (`&`, `<`, `>`) and reuse it across renders, avoiding allocations per call/iteration. File: `utility/slack.go`.
-  - Performance (2025-08-23): Avoid repeated config I/O by caching config in `utility/slack.go` using `sync.Once` (`getConfig()`), used by `SendSlackResponse()` and `PublishSlackHomeTab()`.
+  - Performance (2025-08-23): Confirmed `LoadConfig()` already caches using `sync.Once`; removed redundant caching layer from `utility/slack.go` and now call `LoadConfig()` directly in `SendSlackResponse()` and `PublishSlackHomeTab()`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
