docs(plan): record Slack Home improvements (hash retry, truncation, rune-based list guard, named types)

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -18,6 +18,14 @@
 - UI: Added Account dropdown in the header and moved "Log out" into it. Files updated: `web/src/App.tsx`, `web/src/app.css`.
 - Implemented AI follow-up loop for gemini-code-assist bot reviews in GitHub webhook handler.
 
+### Slack App Home Improvements (2025-08-23)
+- Robust Home tab publishing with context: `utility.PublishSlackHomeTab(ctx, userID, hash)` uses `slack.PublishViewContextRequest` and retries without hash on `hash_conflict`.
+- Home view builder now returns `(view, error)` to surface partial failures (DB fetch issues) while still rendering.
+- Escaping + truncation for titles: escape mrkdwn (`&`, `<`, `>`) and truncate to 150 runes via `truncateRunes()`.
+- Fallback timestamps are formatted with explicit `UTC` via `slackDateFallbackFormat`.
+- Guard total mrkdwn size: define `maxRecentListChars = 2900` and stop appending lines when approaching Slack's 3000-char limit. Count runes, not bytes, using `unicode/utf8` to avoid premature truncation with multi-byte chars. Append `• ... and more` when truncated.
+- Minor refactor in `agent.go`: introduced `slackViewInfo` and replaced anonymous nested struct in `slackAppHomeOpenedEvent` for clarity and reuse.
+
 ### GitHub Webhook Integration (2025-08-20)
 - Security: Added HMAC SHA-256 signature validation for `POST /webhook/github` using `X-Hub-Signature-256` and secret from INI `GITHUB_WEBHOOK_SECRET` (fallback to env).
 - Logging: Verbose request diagnostics (headers, body length, raw body capped at 1MB, client IP, query).
