--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -244,6 +244,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
     - `PublishSlackHomeTab(ctx, userID, hash)` constructs the view with context.
     - Updated call site in `agent.go` to pass `c.Request.Context()` for `app_home_opened`.
   - Micro-optimization (2025-08-23): Define a package-level `strings.NewReplacer` (`slackMrkdwnEscaper`) to escape mrkdwn (`&`, `<`, `>`) and reuse it across renders, avoiding allocations per call/iteration. File: `utility/slack.go`.
+ - Cleanup (2025-08-23): Removed redundant `max == 1` special case in `truncateRunes()`; the general path `string(r[:max-1]) + "…"` already handles it (with `r[:0]` yielding empty string). Behavior unchanged. File: `utility/slack.go`.
   - Performance (2025-08-23): Confirmed `LoadConfig()` already caches using `sync.Once`; removed redundant caching layer from `utility/slack.go` and now call `LoadConfig()` directly in `SendSlackResponse()` and `PublishSlackHomeTab()`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
