--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -247,6 +247,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
  - Cleanup (2025-08-23): Removed redundant `max == 1` special case in `truncateRunes()`; the general path `string(r[:max-1]) + "…"` already handles it (with `r[:0]` yielding empty string). Behavior unchanged. File: `utility/slack.go`.
   - Performance (2025-08-23): Confirmed `LoadConfig()` already caches using `sync.Once`; removed redundant caching layer from `utility/slack.go` and now call `LoadConfig()` directly in `SendSlackResponse()` and `PublishSlackHomeTab()`.
   - Robustness (2025-08-23): Guarded appending of the trailing summary line (`"• ... and more\n"`) in `BuildSlackHomeView()` so it is only added if it fits within `maxRecentListChars`; prevents exceeding the safety threshold when close to the limit. File: `utility/slack.go`.
+  - Refactor (2025-08-23): Extracted recent threads list rendering into `buildRecentThreadsList(threads []threadSummary) string` to reduce nesting and improve readability in `BuildSlackHomeView()`. Behavior unchanged. File: `utility/slack.go`.
   - Slack App configuration required:
     - Scopes: `chat:write` (existing for messages) and `views:write` (new for Home tab).
     - Event Subscriptions: enable Events, add `app_home_opened` to Bot Events, and point Request URL to our `/webhook/slack`.
