docs(plan): move Settings UI to web (#/settings); remove server-rendered /settings; document usage

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -210,16 +210,21 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Backend (file: `agent.go`):
   - Added `requireAuth()` middleware to gate authenticated routes by validating the `session` cookie and injecting `userID` into Gin context.
   - Added routes:
-    - `GET /settings` → server-rendered HTML page with forms to update display name and change password.
     - `GET /api/settings` → returns `{username, name}` for the current user.
     - `POST /api/settings` → updates `users.name` for the current user.
     - `POST /api/settings/password` → verifies current password and updates `users.password_hash`.
   - Security: All POST routes are CSRF-protected via existing `validateCSRF(c)` double-submit token + origin checks. Session cookies continue to be `HttpOnly` with `SameSite=Lax` and `Secure` set when appropriate.
   - DB: Uses existing `users` table (from migrations `0005_users.*`).
 - Usage:
-  - Navigate to `/settings` when logged in. The page fetches `/me` and uses `/csrf` to include `X-CSRF-Token` on writes.
-  - APIs accept/return JSON; ideal for future SPA integration as well.
+  - Settings UI moved to the web frontend with simple hash routing: navigate to `#/settings` from the Account menu.
+  - The server-rendered `GET /settings` route was removed; APIs remain the same.
+  - The SPA uses `/csrf` to include `X-CSRF-Token` on writes.
 - Build: `go build ./...` passes.
+
+### Frontend Settings (2025-08-23)
+- Implemented `SettingsPage` inside `web/src/App.tsx` with hash-based routing (`#/settings`).
+- Account dropdown now includes a Settings item that navigates client-side.
+- Calls existing APIs: `GET /api/settings`, `POST /api/settings`, `POST /api/settings/password`.
 
 ## Frontend Refactor (2025-08-13)
 - Extracted modal UIs from `web/src/App.tsx` into dedicated components:
