Add form for creating and exporting SSH keys in Docker container

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -226,6 +226,26 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Account dropdown now includes a Settings item that navigates client-side.
 - Calls existing APIs: `GET /api/settings`, `POST /api/settings`, `POST /api/settings/password`.
 
+### SSH Key Generation Feature (2025-08-23)
+- Backend (file: `agent.go`):
+  - Added authenticated route `POST /api/ssh-keys` inside `auth := r.Group("/", requireAuth())`, placed after the password change handler.
+  - Enforces CSRF via `validateCSRF(c)`.
+  - Generates keys inside the Docker container: ensures container, ensures `ssh-keygen`, runs keygen, reads keys, and cleans up temp files.
+  - Supports `ed25519` (default) and `rsa` with configurable bits (>=2048). Accepts `comment` and optional `passphrase`.
+  - Returns JSON: `{ ok, type, bits, public_key, private_key }`.
+- Frontend (file: `web/src/App.tsx` → `SettingsPage`):
+  - Added form for type, RSA bits, comment, passphrase; `Generate` calls `/api/ssh-keys` with CSRF.
+  - Displays public/private keys with copy-to-clipboard and download buttons; hides private key by default.
+- Status:
+  - Backend `go build ./...` passes; Frontend `npm run build` passes.
+  - Manual E2E recommended to verify Docker presence and browser downloads.
+- Follow-ups:
+  - Add UI toasts on copy; client-side validation for RSA bits.
+  - Optional backend/FE tests for the route and form.
+
+### Minor Security Fix (2025-08-23)
+- Restored CSRF validation to `POST /github/call` in `agent.go` and limited request body to 1MB.
+
 ## Frontend Refactor (2025-08-13)
 - Extracted modal UIs from `web/src/App.tsx` into dedicated components:
   - `web/src/components/LoginModal.tsx`
