postgres config: prefer DB_-prefixed keys with backwards compatibility; update sample config and README; document in .windsurf_plan.md and CHANGELOG.md\n\n- db/postgres.go: load DB_DSN/DB_HOST/DB_PORT/DB_USER/DB_PASSWORD/DB_NAME/DB_SSLMODE/DB_MIGRATIONS_DIR with fallbacks to legacy keys and PG* envs; build DSN when absent\n- config.sample.ini: switch [postgres] to DB_-prefixed keys, mention optional DB_DSN\n- README.md: update config example to DB_-prefixed keys and optional DB_DSN\n- .windsurf_plan.md: add section documenting key rename and compatibility\n- CHANGELOG.md: add 2.1.1 entry for key rename and doc updates

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -151,6 +151,13 @@
  - Enhanced migration engine to support `.up.sql`/`.down.sql` conventions, stepwise up/down, and status reporting.
  - Added example down migration `migrations/0001_init.down.sql`.
 
+### Config Key Prefix Rename (2025-08-31)
+- Change: Standardized PostgreSQL config keys to use `DB_` prefix in `[postgres]` section.
+  - Preferred keys: `DB_DSN` (optional), `DB_HOST`, `DB_PORT`, `DB_USER`, `DB_PASSWORD`, `DB_NAME`, `DB_SSLMODE`, `DB_MIGRATIONS_DIR`.
+  - Backward compatibility: Legacy keys remain supported (`PG_DSN`, `HOST`, `PORT`, `USER`, `PASSWORD`, `DBNAME`, `SSLMODE`, `MIGRATIONS_DIR`) and env vars (`PGHOST`, `PGPORT`, `PGUSER`, `PGPASSWORD`, `PGDATABASE`).
+- Code: Updated `db/postgres.go` `loadPGConfig()` to prefer new keys with fallbacks; DSN built if not provided.
+- Docs/Samples: Updated `config.sample.ini` and `README.md` to show new keys.
+
 ### Conversation storage migrations (2025-08-09)
 - Added `migrations/0002_conversations_threads_messages.up.sql` to create tables:
   - `threads` (id, title, created_at, updated_at)
