settings(ui): add tabbed Settings with new 'Docker Settings' tab (placeholder)
- web/src/App.tsx: introduce tabs (Profile/Password/Docker Settings); add Docker form placeholders (container name, image, extra args, auto-remove) with Save disabled pending backend
- .windsurf_plan.md: document new Docker Settings tab and future backend work
- CHANGELOG.md: add 2.1.2 entry

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -233,6 +233,11 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Account dropdown now includes a Settings item that navigates client-side.
 - Calls existing APIs: `GET /api/settings`, `POST /api/settings`, `POST /api/settings/password`.
 
+### Settings: Docker Settings Tab (2025-08-31)
+- Frontend (`web/src/App.tsx`): Added a tabbed UI to the Settings page with a new "Docker Settings" tab alongside Profile and Password.
+- Docker tab currently shows placeholders for container name, image, extra args, and auto-remove. Save is disabled pending backend API.
+- No backend changes yet; future work: expose read/write of Docker settings (e.g., DOCKER_CONTAINER_NAME, DOCKER_IMAGE, DOCKER_EXTRA_ARGS, DOCKER_AUTO_REMOVE) via authenticated endpoints with CSRF.
+
 ### SSH Key Generation Feature (2025-08-23)
 - Backend (file: `agent.go`):
   - Added authenticated route `POST /api/ssh-keys` inside `auth := r.Group("/", requireAuth())`, placed after the password change handler.
