--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -237,6 +237,7 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Frontend (`web/src/App.tsx`): Added a tabbed UI to the Settings page with a new "Docker Settings" tab alongside Profile and Password.
 - Docker tab currently shows placeholders for container name, image, extra args, and auto-remove. Save is disabled pending backend API.
 - No backend changes yet; future work: expose read/write of Docker settings (e.g., DOCKER_CONTAINER_NAME, DOCKER_IMAGE, DOCKER_EXTRA_ARGS, DOCKER_AUTO_REMOVE) via authenticated endpoints with CSRF.
+ - UI refinement: Moved the Settings tabs into a fixed horizontal toolbar rendered by `App` just under the header; `SettingsPage` now receives `tab`/`onChangeTab` props.
 
 ### SSH Key Generation Feature (2025-08-23)
 - Backend (file: `agent.go`):
